--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,21 +1,6 @@
 ---
-- name: Install telegraf
-  yum:
-    name=https://dl.influxdata.com/telegraf/releases/telegraf-{{telegraf_version}}.{{telegraf_arch}}.rpm
-    state=present
+- include: install.yml
+  tags: []
 
-- name: Create telegraf.conf
-  template:
-    src=telegraf.conf.j2
-    dest=/etc/telegraf/telegraf.conf
-    backup=true
-
-- name: Start telegraf
-  service:
-    name=telegraf
-    state=started
-
-- name: Enable telegraf
-  service:
-    name=telegraf
-    enabled=true
+- include: configure.yml
+  tags: []
