--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 telegraf_redhat_arch: x86_64
-telegraf_debian_arch: amd64
+telegraf_arch: "{% if ansible_os_family == 'RedHat' %}x86_64{% elseif ansible_os_family == 'Debian' %}amd64{% endif %}"
 
 # CONFIG
 telegraf_tags:
