--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-telegraf_redhat_arch: x86_64
+telegraf_version: 1.0.1
 telegraf_arch: "{% if ansible_os_family == 'RedHat' %}x86_64{% elseif ansible_os_family == 'Debian' %}amd64{% endif %}"
 
 # CONFIG
