--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   description: install, configure and manage Telegraf
   company: InfluxData
   license: MIT
-  min_ansible_version: 1.2
+  min_ansible_version: 2.0
   platforms:
     - name: EL
       versions:
@@ -21,4 +21,4 @@ galaxy_info:
         - wheezy
   galaxy_tags:
     - monitoring
-dependences: []
+dependencies: []
