--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -46,3 +46,7 @@ telegraf_inputs_cpu_collect_cpu_time: 'false'
 # [inputs.disk]
 telegraf_inputs_disk_mount_points: []
 telegraf_inputs_disk_ignore_fs: ['tmpfs', 'devtmpfs']
+
+# [inputs.diskio]
+telegraf_inputs_diskio_devices: []
+telegraf_inputs_diskio_skip_serial_number: 'true'
