--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -9,6 +9,16 @@
   notify:
     - Restart telegraf
 
+- name: Telegraf | Add custom config to telegraf.d
+  copy:
+    src: "{{ item }}"
+    dest: /etc/telegraf/telegraf.d/
+    owner: telegraf
+    group: telegraf
+  with_filegolb: "{{ telegraf_custom_config_files }}"
+  notify:
+    - Restart telegraf
+
 - name: Telegraf | Start and Enable telegraf
   service:
     name: telegraf
