Enable net netstat by default

--- a/templates/telegraf.conf
+++ b/templates/telegraf.conf
@@ -229,6 +229,18 @@
 [[inputs.system]]
   # no configuration
 
+# # Read metrics about network interface usage
+[[inputs.net]]
+  ## By default, telegraf gathers stats from any up interface (excluding loopback)
+  ## Setting interfaces will tell it to gather these explicit interfaces,
+  ## regardless of status.
+{% if telegraf_inputs_net_interfaces %}
+  interfaces = ["{{ telegraf_inputs_net_interfaces | join('", "') }}"]
+{% endif %}
+
+# # Read TCP metrics such as established, time wait and sockets counts.
+[[inputs.netstat]]
+  # no configuration
 
 # # Read metrics from one or more commands that can output to stdout
 # [[inputs.exec]]
