--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,7 +21,7 @@ telegraf_agent_omit_hostname: 'false'
 
 ## OUTPUT PLUGINS
 
-# [outputs.influxdb]
+# [[outputs.influxdb]]
 telegraf_outputs_influxdb_urls: ['http://localhost:8086']
 telegraf_outputs_influxdb_database: telegraf
 telegraf_outputs_influxdb_retention_policy: 
@@ -38,20 +38,23 @@ telegraf_outputs_influxdb_insecure_skip_verify: 'false'
 
 ## INPUT PLUGINS
 
-# [inputs.cpu]
+# [[inputs.cpu]]
 telegraf_inputs_cpu_percpu: 'true'
 telegraf_inputs_cpu_totalcpu: 'true'
 telegraf_inputs_cpu_collect_cpu_time: 'false'
 
-# [inputs.disk]
+# [[inputs.disk]]
 telegraf_inputs_disk_mount_points: []
 telegraf_inputs_disk_ignore_fs: ['tmpfs', 'devtmpfs']
 
-# [inputs.diskio]
+# [[inputs.diskio]]
 telegraf_inputs_diskio_devices: []
 telegraf_inputs_diskio_skip_serial_number: 'true'
 
-# use /etc/telegraf/telegraf.d for more specific usages
+# [[inputs.net]]
+telegraf_inputs_net_interfaces: ['eth0']
 
+
+# use /etc/telegraf/telegraf.d for more specific usages
 # /.../*.conf
 telegraf_custom_config_files: []
