--- a/templates/telegraf.conf
+++ b/templates/telegraf.conf
@@ -1,7 +1,7 @@
 [global_tags]
 # Global tags can be specified here in key="value" format.
 {% if telegraf_global_tags %}
-{% for key, value in telegraf_tags.iteritems() %}
+{% for key, value in telegraf_global_tags.iteritems() %}
     {{ key }} = "{{ value }}"
 {% endfor %}
 {% endif %}
