--- a/templates/telegraf.conf
+++ b/templates/telegraf.conf
@@ -88,64 +88,70 @@
 ###############################################################################
 
 # Configuration for influxdb server to send metrics to
+{% if telegraf_outputs_influxdb %}
+{% for influxdb in telegraf_outputs_influxdb %}
 [[outputs.influxdb]]
   ## The full HTTP or UDP endpoint URL for your InfluxDB instance.
   ## Multiple urls can be specified as part of the same cluster,
   ## this means that only ONE of the urls will be written to each interval.
   # urls = ["udp://localhost:8089"] # UDP endpoint example
-{% if telegraf_outputs_influxdb_urls %}
-  urls = ["{{ telegraf_outputs_influxdb_urls | join('", "') }}"]
+{% if influxdb.urls %}
+  urls = ["{{ influxdb.urls | join('", "') }}"]
 {% endif %}
 
   ## The target database for metrics (telegraf will create it if not exists).
-{% if telegraf_outputs_influxdb_database %}
-  database = "{{ telegraf_outputs_influxdb_database }}" # required
+{% if influx.database %}
+  database = "{{ influx.database }}" # required
 {% endif %}
 
   ## Retention policy to write to. Empty string writes to the default rp.
-{% if telegraf_outputs_influxdb_retention_policy %}
-  retention_policy = "{{ telegraf_outputs_influxdb_retention_policy }}"
+{% if influxdb.retention_policy %}
+  retention_policy = "{{ influxdb.retention_policy }}"
 {% endif %}
 
   ## Write consistency (clusters only), can be: "any", "one", "quorum", "all"
-{% if telegraf_outputs_influxdb_write_consistency %}
-  write_consistency = "{{ telegraf_outputs_influxdb_write_consistency }}"
+{% if influxdb.write_consistency %}
+  write_consistency = "{{ influxdb.write_consistency }}"
 {% endif %}
 
   ## Write timeout (for the InfluxDB client), formatted as a string.
   ## If not provided, will default to 5s. 0s means no timeout (not recommended).
-{% if telegraf_outputs_influxdb_timeout %}
-  timeout = "{{ telegraf_outputs_influxdb_timeout }}"
+{% if influxdb.timeout %}
+  timeout = "{{ influxdb.timeout }}"
 {% endif %}
-{% if telegraf_outputs_influxdb_username %}
-  username = "{{ telegraf_outputs_influxdb_username }}"
+{% if influxdb.username %}
+  username = "{{ influxdb.username }}"
 {% endif %}
-{% if telegraf_outputs_influxdb_password %}
-  password = "{{ telegraf_outputs_influxdb_password }}"
+{% if influxdb.password %}
+  password = "{{ influxdb.password }}"
 {% endif %}
   ## Set the user agent for HTTP POSTs (can be useful for log differentiation)
-{% if telegraf_outputs_influxdb_user_agent %}
-  user_agent = "{{ telegraf_outputs_influxdb_user_agent }}"
+{% if influxdb.user_agent %}
+  user_agent = "{{ influxdb.user_agent }}"
 {% endif %}
   ## Set UDP payload size, defaults to InfluxDB UDP Client default (512 bytes)
-{% if telegraf_outputs_influxdb_udp_playload %}
-  udp_payload = {{ telegraf_outputs_influxdb_udp_playload }}
+{% if influxdb.udp_playload %}
+  udp_payload = {{ influxdb.udp_playload }}
 {% endif %}
 
   ## Optional SSL Config
-{% if telegraf_outputs_influxdb_ssl_ca %}
-  ssl_ca = "{{ telegraf_outputs_influxdb_ssl_ca }}"
+{% if influxdb.ssl_ca %}
+  ssl_ca = "{{ influxdb.ssl_ca }}"
 {% endif %}
-{% if telegraf_outputs_influxdb_ssl_cert %}
-  ssl_cert = "{{ telegraf_outputs_influxdb_ssl_cert }}"
+{% if influxdb.ssl_cert %}
+  ssl_cert = "{{ influxdb.ssl_cert }}"
 {% endif %}
-{% if telegraf_outputs_influxdb_ssl_key %}
-  ssl_key = "{{ telegraf_outputs_influxdb_ssl_key }}"
+{% if influxdb.ssl_key %}
+  ssl_key = "{{ influxdb.ssl_key }}"
 {% endif %}
   ## Use SSL but skip chain & host verification
-{% if telegraf_outputs_influxdb_insecure_skip_verify %}
-  insecure_skip_verify = {{ telegraf_outputs_influxdb_insecure_skip_verify }}
+{% if influxdb.insecure_skip_verify %}
+  insecure_skip_verify = {{ influxdb.insecure_skip_verify }}
 {% endif %}
+
+{% endfor %}
+{% endif %}
+
 
 # # Send telegraf metrics to file(s)
 # [[outputs.file]]
