--- a/templates/telegraf.conf
+++ b/templates/telegraf.conf
@@ -100,8 +100,8 @@
 {% endif %}
 
   ## The target database for metrics (telegraf will create it if not exists).
-{% if influx.database %}
-  database = "{{ influx.database }}" # required
+{% if influxdb.database %}
+  database = "{{ influxdb.database }}" # required
 {% endif %}
 
   ## Retention policy to write to. Empty string writes to the default rp.
