--- a/tasks/install-debian.yml
+++ b/tasks/install-debian.yml
@@ -1,5 +1,5 @@
 ---
 - name: Telegraf | Install telegraf from URL [Debian/Ubuntu]
   apt:
-    deb: https://dl.influxdata.com/telegraf/releases/telegraf_{{ telegraf_version }}_{{ telegraf_arch }}.deb
+    deb: "{{ telegraf_mirror | default('https://dl.influxdata.com/telegraf/releases') }}/telegraf_{{ telegraf_version }}_{{ telegraf_arch }}.deb"
     state: present
